--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,8 +83,20 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header{
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  background-color: var(--body-color);
+  z-index: var(--z-fixed);
+}
 
-
+.nav{
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+}
 /* Navigation for mobile devices */
 
 
