Update space between
Update space between items in the nav bar.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -96,6 +96,7 @@ img {
   position: relative;
   height: var(--header-height);
   display: flex;
+  justify-content: space-between;
 }
 /* Navigation for mobile devices */
 
