--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -97,6 +97,11 @@ img {
   height: var(--header-height);
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.nav__logo{
+  width: 36px;
 }
 /* Navigation for mobile devices */
 
